css/scrollbar.css
* {
    margin: 0;
    padding: 0;
}
html {
    height: 100%;
    width: 100%;
}
body {
    font-family:'Helvetica Neue', Arial, sans-serif;
    font-size: 13px;
    min-height: 100%;
    width: 100%;
}
h3 {
    font-size: 1.5em;
    margin: 0.5em 0;
}
/* from almaer.com/scrollbar/debug.html */
 .scroll-wrapper {
    height: 500px;
    overflow: hidden;
    position: relative;
    margin: 50px;
    width: 500px;
    background: fff;
    border: 1px solid red;
}
.scroll-area {
    width: 100%;
    height: 100%;
    padding-right: 20px;
    padding-bottom: 20px;
    overflow: scroll;
    position: relative;
}
.scroll-area > .original-content {
    padding: 30px;
    position: relative;
}
.scroll {
    width: 900px;
}
.sc1 {
    width: 200%;
}
::-webkit-scrollbar {
    height: 0;
    width: 0;
    display: none;
    opacity: 0;
}

.scrollbar {
    opacity: 0;
    -webkit-transition-property: opacity, width, height;
    -webkit-transition-duration: 200ms, 0ms, 0ms;
    -webkit-transition-delay: 1000ms, 1200ms, 1200ms;
    -moz-transition-property: opacity, width, height;
    -moz-transition-duration: 200ms, 0ms, 0ms;
    -moz-transition-delay: 1000ms, 1200ms, 1200ms;
    -o-transition-property: opacity, width, height;
    -o-transition-duration: 200ms, 0ms, 0ms;
    -o-transition-delay: 1000ms, 1200ms, 1200ms;
    transition-property: opacity, width, height;
    transition-duration: 200ms, 0ms, 0ms;
    transition-delay: 1000ms, 1200ms, 1200ms;
}
.scrollbar-thumb {
    border-radius: 8px;
}
.clicked-vertically .scrollbar.vertical .scrollbar-track, .scrollbar.vertical:hover .scrollbar-track {
    background: rgba(255, 255, 255, 0.8);
    box-shadow: 2px 0 1px -1px rgba(0, 0, 0, 0.3) inset, 20px 0 20px -20px rgba(0, 0, 0, 0.2) inset;
}
.clicked-horizontally .scrollbar.horizontal .scrollbar-track, .scrollbar.horizontal:hover .scrollbar-track {
    background: rgba(255, 255, 255, 0.8);
    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.3) inset, 0 20px 20px -20px rgba(0, 0, 0, 0.2) inset;
}
.clicked-vertically .scrollbar.vertical, .scrollbar.vertical:hover {
    width: 14px;
    opacity: 0.8;
    -webkit-transition-property: opacity, width, height;
    -webkit-transition-duration: 0ms, 0ms, 0ms;
    -webkit-transition-delay: 0ms, 0ms, 0ms;
    -moz-transition-property: opacity, width, height;
    -moz-transition-duration: 0ms, 0ms, 0ms;
    -moz-transition-delay: 0ms, 0ms, 0ms;
    -o-transition-property: opacity, width, height;
    -o-transition-duration: 0ms, 0ms, 0ms;
    -o-transition-delay: 0ms, 0ms, 0ms;
    transition-property: opacity, width, height;
    transition-duration: 0ms, 0ms, 0ms;
    transition-delay: 0ms, 0ms, 0ms;
}
.clicked-horizontally .scrollbar.horizontal, .scrollbar.horizontal:hover {
    height: 14px;
    opacity: 0.8;
    -webkit-transition-property: opacity, width, height;
    -webkit-transition-duration: 0ms, 0ms, 0ms;
    -webkit-transition-delay: 0ms, 0ms, 0ms;
    -moz-transition-property: opacity, width, height;
    -moz-transition-duration: 0ms, 0ms, 0ms;
    -moz-transition-delay: 0ms, 0ms, 0ms;
    -o-transition-property: opacity, width, height;
    -o-transition-duration: 0ms, 0ms, 0ms;
    -o-transition-delay: 0ms, 0ms, 0ms;
    transition-property: opacity, width, height;
    transition-duration: 0ms, 0ms, 0ms;
    transition-delay: 0ms, 0ms, 0ms;
}
.scrolling-vertically .scrollbar.vertical, .scrolling-horizontally .scrollbar.horizontal {
    opacity: 0.8;
    -webkit-transition-property: opacity, width, height;
    -webkit-transition-duration: 0ms, 0ms, 0ms;
    -webkit-transition-delay: 0ms, 0ms, 0ms;
    -moz-transition-property: opacity, width, height;
    -moz-transition-duration: 0ms, 0ms, 0ms;
    -moz-transition-delay: 0ms, 0ms, 0ms;
    -o-transition-property: opacity, width, height;
    -o-transition-duration: 0ms, 0ms, 0ms;
    -o-transition-delay: 0ms, 0ms, 0ms;
    transition-property: opacity, width, height;
    transition-duration: 0ms, 0ms, 0ms;
    transition-delay: 0ms, 0ms, 0ms;
}
/* Turn on a 13x13 scrollbar */
 .scrollbar.vertical {
    width:10px;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: auto;
}
.scrollbar.vertical .scrollbar-button {
    background-color: red;
    position: absolute;
    left: 0;
    right: 0;
}
/* Turn on single button up on top, and down on bottom */
 .scrollbar.vertical .scrollbar-button.start.decrement, .scrollbar-button.end.increment {
    display: none;
    height:10px;
    z-index: 1;
}
/* Turn off the down area up on top, and up area on bottom */
 .scrollbar.vertical .scrollbar-button.start.increment, .scrollbar-button.end.decrement {
    display: none;
}
/* Place The scroll down button at the bottom */
 .scrollbar.vertical .scrollbar-button.decrement.start {
    background-color: none;
    top: 0;
}
.scrollbar.vertical .scrollbar-button.increment.end {
    background-color: orange;
    bottom: 0;
}
.scrollbar.vertical .scrollbar-track {
    background-color: none;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 0;
}
/* Top area above thumb and below up button */
 .scrollbar.vertical .scrollbar-track-piece.start {
    background-color: none;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
}
/* Bottom area below thumb and down button */
 .scrollbar.vertical .scrollbar-track-piece.end {
    background: none;
    position: absolute;
    left: 0;
    bottom: 0;
    right: 0;
}
/* Track below and above */
 .scrollbar.vertical .scrollbar-track-piece {
    z-index: 0;
}
/* The thumb itself */
 .scrollbar.vertical .scrollbar-thumb {
    height: 50px;
    background: #333;
    position: absolute;
    top: 0;
    left: 2px;
    right: 2px;
    z-index: 1;
}
/* Turn on a 13x13 scrollbar */
 .scrollbar.horizontal {
    height:10px;
    position: absolute;
    top: auto;
    bottom: 0;
    right: 0;
    left: 0;
}
.scrollbar.horizontal .scrollbar-button {
    background-color: red;
    position: absolute;
    top: 0;
    bottom: 0;
}
/* Turn on single button up on top, and down on bottom */
 .scrollbar.horizontal .scrollbar-button.start.decrement, .scrollbar-button.end.increment {
    display: none;
    width:10px;
    z-index: 1;
}
/* Turn off the down area up on top, and up area on bottom */
 .scrollbar.horizontal .scrollbar-button.start.increment, .scrollbar-button.end.decrement {
    display: none;
}
/* Place The scroll down button at the bottom */
 .scrollbar.horizontal .scrollbar-button.decrement.start {
    background: none;
    left: 0;
}
.scrollbar.horizontal .scrollbar-button.increment.end {
    background-color: orange;
    right: 0;
}
.scrollbar.horizontal .scrollbar-track {
    background: none;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 0;
}
.scrollbar-vertical .scrollbar.horizontal .scrollbar-track {
    right:14px;
}
.scrollbar-horizontal .scrollbar.vertical .scrollbar-track {
    bottom:14px;
}
/* Top area above thumb and below up button */
 .scrollbar.horizontal .scrollbar-track-piece.start {
    background-color: none;
    position: absolute;
    left: 0;
    top: 2px;
    0: 0;
}
/* Bottom area below thumb and down button */
 .scrollbar.horizontal .scrollbar-track-piece.end {
    background: none;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
}
/* Track below and above */
 .scrollbar.horizontal .scrollbar-track-piece {
    z-index: 0;
}
/* The thumb itself */
 .scrollbar.horizontal .scrollbar-thumb {
    width: 50px;
    background-color: #333;
    position: absolute;
    top: 2px;
    left: 0;
    bottom: 2px;
    z-index: 1;
}
/* Corner */
 .scrollbar-corner {
    background-color: black;
}
/* Resizer */
 .scrollbar-resizer {
    background-color: gray;
}

